﻿RELEASE HISTORY

21/11/2014 1.00 beta rev 425
    - Completed Arduino Sketch support inside HomeGenie Program Editor
    - Added DHT-22 app
    - Added SmartIC app for using two MCP23017 I/O expanders
    - Updated Grove-RGB, OneWire, DHT-11 apps
    - Updated Jint Javascript Engine
    - Moved HomeGenie/HomeGenieUI/html to BaseFiles/Common/html
    - Fixed solution build errors under Windows and Mac

20/11/2014 1.00 beta rev 422
    - Added skelton for ProgramEngine.CompileArduino function
    - Adding support for Arduino sketches inside HomeGenie Program Editor (wip)

14/11/2014 1.00 beta rev 421
    - Updated MCP3008 program
    - Fixed modules sorting issue

13/11/2014 1.00 beta rev 420
    - Added 1-Wire modules app
    - Updated Insteon interface to support X10 modules (wip)
    - Updated Generic Thermostat app
    - Fixed missing png files for thermostat widget (issue #45)
    - Fixed some missing app assemblies

12/11/2014 1.00 beta rev 419
    - Fixed ModuleParameter.DecimalValue negative values conversion (issue #43)
    - Reviewed ZWaveLib/MIG Thermostat device implementation
    - Added new thermostat widget
    - Updated MCP3008 app, now with virtual modules mapped from analog input channels
    - Added "Generic Thermostat" app for using any sensor and any switch module for implementing a thermostat logic
    - Fixed modules properties editing bug (issue #27)
    - Enhanced HTTP port binding: if default HTTP port is busy, HG will now try to bind from 8080 to 8090
    - Should fix Z-Wave discovery problem reported as issue #42

05/10/2014 1.00 beta rev 418
    - Fixed Ruby engine error (issue #33)
    
04/10/2014 1.00 beta rev 416
    - Some minor fixes to r415

02/10/2014 1.00 beta rev 415
    - Added Eden Sensor Board programs to Raspberry Pi section (http://homegenie.it/docs/diy/eden.php)
    - Improved Program Editor UI
    - Updated Python and Ruby engines to latest IronLanguages release

30/09/2014 1.00 beta rev 413