@@ -53,7 +53,7 @@
 
                 <div class="ui-grid-a">
                     <div class="ui-block-a" style="width:27%">version</div>
-                    <div class="ui-block-b" style="width:73%">&nbsp;&nbsp;1.00 beta r425</div>
+                    <div class="ui-block-b" style="width:73%">&nbsp;&nbsp;1.00 beta r428</div>
                 </div>
 
                 <div class="ui-grid-a">
