@@ -2,8 +2,8 @@
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
   <MonoDevelop.Ide.Workbench ActiveDocument="../HISTORY.TXT">
     <Files>
-      <File FileName="../HISTORY.TXT" Line="6" Column="17" />
-      <File FileName="../HomeGenie/release_info.xml" Line="8" Column="37" />
+      <File FileName="../HISTORY.TXT" Line="4" Column="9" />
+      <File FileName="../HomeGenie/release_info.xml" Line="12" Column="35" />
     </Files>
   </MonoDevelop.Ide.Workbench>
   <MonoDevelop.Ide.DebuggingService.Breakpoints>
