@@ -3,13 +3,19 @@ Microsoft Visual Studio Solution File, Format Version 11.00
 # Visual Studio 2010
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MIG", "MIG\MIG.csproj", "{005357C9-7F8E-458E-AFFA-BF84F7D6A6AE}"
 EndProject
-Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Support Libraries", "Support Libraries", "{9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}"
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "SupportLibraries", "SupportLibraries", "{9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "ZWaveLib", "Support Libraries\ZWaveLib\ZWaveLib.csproj", "{06995CE8-149B-42FA-B345-FB11C4D6E180}"
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TcpClientLib", "SupportLibraries\TcpClientLib\TcpClientLib.csproj", "{318D2523-3C8B-4273-B1EA-DE339868403C}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "XTenLib", "Support Libraries\XTenLib\XTenLib.csproj", "{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}"
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TUIOLib", "SupportLibraries\TUIOLib\TUIOLib.csproj", "{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TUIOLib", "Support Libraries\TUIOLib\TUIOLib.csproj", "{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}"
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "W800RF32", "SupportLibraries\W800RF32\W800RF32.csproj", "{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "ZWaveLib", "SupportLibraries\ZWaveLib\ZWaveLib.csproj", "{06995CE8-149B-42FA-B345-FB11C4D6E180}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "XTenLib", "SupportLibraries\XTenLib\XTenLib.csproj", "{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "SerialPortLib", "SupportLibraries\SerialPortLib\SerialPortLib.csproj", "{8118C0B9-3B16-47AA-8B24-E5B15F429F78}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -36,36 +42,81 @@ Global
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Debug|x86.Build.0 = Debug|Any CPU
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Release|Any CPU.Build.0 = Release|Any CPU
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Release|Mixed Platforms.Build.0 = Release|Any CPU
 		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Release|x86.ActiveCfg = Release|Any CPU
+		{06995CE8-149B-42FA-B345-FB11C4D6E180}.Release|x86.Build.0 = Release|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Debug|x86.Build.0 = Debug|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Release|Any CPU.Build.0 = Release|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Release|Mixed Platforms.Build.0 = Release|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Release|x86.ActiveCfg = Release|Any CPU
+		{318D2523-3C8B-4273-B1EA-DE339868403C}.Release|x86.Build.0 = Release|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Debug|x86.Build.0 = Debug|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Release|Any CPU.Build.0 = Release|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Release|Mixed Platforms.Build.0 = Release|Any CPU
 		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Release|x86.ActiveCfg = Release|Any CPU
+		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D}.Release|x86.Build.0 = Release|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Debug|x86.Build.0 = Debug|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Release|Any CPU.Build.0 = Release|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Release|Mixed Platforms.Build.0 = Release|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Release|x86.ActiveCfg = Release|Any CPU
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78}.Release|x86.Build.0 = Release|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Debug|x86.Build.0 = Debug|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Release|Any CPU.Build.0 = Release|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Release|Mixed Platforms.Build.0 = Release|Any CPU
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Release|x86.ActiveCfg = Release|Any CPU
+		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF}.Release|x86.Build.0 = Release|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Debug|x86.Build.0 = Debug|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Release|Any CPU.Build.0 = Release|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Release|Mixed Platforms.Build.0 = Release|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Release|x86.ActiveCfg = Release|Any CPU
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D}.Release|x86.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(NestedProjects) = preSolution
+		{318D2523-3C8B-4273-B1EA-DE339868403C} = {9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}
+		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D} = {9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}
+		{D98143B1-85B3-4F7F-AFCB-39D2B5DC6C6D} = {9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}
 		{06995CE8-149B-42FA-B345-FB11C4D6E180} = {9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}
 		{92933BA1-609C-4DE0-B29E-FDA37C7DC0EF} = {9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}
-		{41BAB999-0A6A-48C6-8DA6-B55323BD6B6D} = {9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}
+		{8118C0B9-3B16-47AA-8B24-E5B15F429F78} = {9EB8E871-A955-4756-A7F2-ECC1A6C5DD8D}
 	EndGlobalSection
 	GlobalSection(MonoDevelopProperties) = preSolution
 		StartupItem = MIG\MIG.csproj
