@@ -1,30 +1,13 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="Support Libraries\OpenKinectLib\OpenKinect.cs">
+  <MonoDevelop.Ide.Workbench ActiveDocument="MIG/Interfaces/HomeAutomation/X10.cs">
     <Files>
-      <File FileName="Support Libraries\ZWaveLib\Devices\ZWaveNode.cs" Line="253" Column="1" />
-      <File FileName="Support Libraries\XTenLib\XTenCM15.cs" Line="126" Column="41" />
-      <File FileName="Support Libraries\ZWaveLib\ZWavePort.cs" Line="114" Column="17" />
-      <File FileName="MIG\Interfaces\HomeAutomation\ZWave.cs" Line="274" Column="4" />
-      <File FileName="MIG\Gateways\WebServiceGateway.cs" Line="39" Column="43" />
-      <File FileName="MIG\Gateways\TcpSocketGateway.cs" Line="1" Column="1" />
-      <File FileName="MIG\MIGService.cs" Line="132" Column="9" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\Controller.cs" Line="153" Column="91" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\ProductHandlers\HomeSeer\HSM100WirelessMultiSensor.cs" Line="37" Column="29" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\ProductHandlers\FortrezZ\SSA1StrobeSiren.cs" Line="3" Column="1" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\Switch.cs" Line="92" Column="1" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\CommandClass.cs" Line="16" Column="30" />
-      <File FileName="MIG\Interfaces\HomeAutomation\X10.cs" Line="141" Column="33" />
-      <File FileName="Support Libraries\ZWaveLib\Logger.cs" Line="18" Column="6" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\IZWaveDeviceHandler.cs" Line="1" Column="1" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\Dimmer.cs" Line="8" Column="1" />
-      <File FileName="Support Libraries\ZWaveLib\Devices\ProductHandlers\Aeon\MicroSmartEnergyIlluminator.cs" Line="1" Column="1" />
-      <File FileName="Support Libraries\OpenKinectLib\OpenKinect.cs" Line="305" Column="16" />
+      <File FileName="MIG/Interfaces/HomeAutomation/X10.cs" Line="17" Column="1" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
         <State expanded="True">
-          <Node name="MIG" expanded="True" selected="True" />
+          <Node name="MIG" selected="True" />
         </State>
       </Pad>
       <Pad Id="MonoDevelop.Debugger.WatchPad">
